section 25: iniciando. (depois voltar na 24)

--- a/treino s22 e s23/index.html
+++ b/treino s22 e s23/index.html
@@ -38,6 +38,6 @@
   </footer>
   <script src="models/alunoModel.js"></script>
   <script src="controller/alunosController.js"></script>
-  <script src="views/alunosView.js"></script>
+  <script src="views/alunosViews.js"></script>
 </body>
 </html>
